# stooq-api

./: CHANGELOG.md  LICENSE  README.md  default.nix  flake.nix  hie.yaml  pkgs.nix  shell.nix  stooq-api.cabal
src/lib/Web/Data/Stooq/: API.hs
src/utils/Web/Data/Stooq/: Internals.hs
