cabal-version:      2.0

name:               stooq-api
version:            0.4.4.0
synopsis:           A simple wrapper around stooq.pl API for downloading market data.
description:
  Here's a simple wrapper around API offered by Stooq.pl.
  It's capable of returning the latest price for the given instrument.
  .
  For more information about tickers available, visit the service.

bug-reports:        https://github.com/bratfizyk/stooq-api/issues
license:            MIT
license-file:       LICENSE
author:             Alojzy Leszcz
maintainer:         alojzy.leszcz.semester130@passinbox.com
category:           Web
build-type:         Simple
extra-source-files: CHANGELOG.md
Source-repository head
  type:     git
  location: https://github.com/bratfizyk/stooq-api

library stooq-api-utils
  exposed-modules:    Web.Data.Stooq.Internals
  build-depends:      base,
                      bytestring,
                      cassava,
                      text,
                      time,
                      vector
  hs-source-dirs:     src/utils
  default-language:   Haskell2010

library
    exposed-modules:  Web.Data.Stooq.API
    build-depends:    base          >= 4.19 && < 4.20,
                      bytestring    >= 0.12 && < 0.13,
                      cassava       >= 0.5  && < 0.6,
                      lens          >= 5.3  && < 5.4,
                      text          >= 2.1  && < 2.2,
                      time          >= 1.12 && < 1.13,
                      utf8-string   >= 1.0  && < 1.1,
                      vector        >= 0.13 && < 0.14,
                      wreq          >= 0.5  && < 0.6,
                      stooq-api-utils
    hs-source-dirs:   src/lib
    default-language: Haskell2010
